# fgp-cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: IMPORT-FORMATS.md  MIGRATION-MCP-TO-FGP.md  SKILL-IMPORT.md
examples/: workflow.sh
logs/: session_start.json  user_prompt_submit.json
src/: main.rs  notifications.rs
src/commands/: agents.rs  call.rs  dashboard.rs  generate.rs  health.rs  install.rs  license.rs  logs.rs  mcp_bridge.rs  methods.rs  mod.rs  monitor.rs  new.rs  skill.rs  skill_export.rs  skill_import.rs  skill_tap.rs  skill_validate.rs  start.rs  status.rs  stop.rs  tui.rs  workflow.rs
src/templates/: Cargo.toml.tmpl  README.md.tmpl  continue.yaml.tmpl  cursor.mdc.tmpl  main.rs.tmpl  manifest.json.tmpl  skill.md.tmpl  windsurf.md.tmpl
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: integration.rs
