[package]
name = "fgp"
version = "0.1.0"
edition = "2021"
description = "CLI for managing Fast Gateway Protocol daemons"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/cli"
homepage = "https://github.com/fast-gateway-protocol"
documentation = "https://docs.rs/fgp"
keywords = ["fgp", "daemon", "cli", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fgp"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# FGP daemon client
fgp-daemon = { git = "https://github.com/fast-gateway-protocol/daemon.git" }

# FGP workflow engine
fgp-workflow = { git = "https://github.com/fast-gateway-protocol/workflow.git" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Path expansion
shellexpand = "3.1"

# Colors and formatting
colored = "2"

# Table output
tabled = "0.16"

# Process management
sysinfo = "0.32"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime for TUI events
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }

# Date/time
chrono = "0.4"

# Home directory
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
